@@ -14,6 +14,7 @@ CHANGELOG RoundCube Webmail
 - Fix TinyMCE buttons are hidden in Opera (#1486922)
 - Fix JS error on IE when trying to send HTML message with enabled spellchecker (#1486940)
 - Display inline images with known extensions and non-image content-type (#1486934)
+- Fix "Threaded" checkbox after subfolder creation (#1486928)
 
 RELEASE 0.4
 -----------
